Bug 3 squashed.
Works for punctuation and dates.

--- a/Coding/Stylesheets/mss.css
+++ b/Coding/Stylesheets/mss.css
@@ -51,6 +51,9 @@ a:hover {
   background-color: inherit;
   text-decoration: inherit;
   color: inherit;
+}
+
+.punct {
   font-family: "Times New Roman", serif;
 }
 
@@ -58,6 +61,7 @@ a:hover {
   background-color: inherit;
   text-decoration: inherit;
   color: inherit;
+  font-family: "Times New Roman", serif;
 }
 
 .expansion {
